Apply Prettier formatting to all documents
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/_views/alignment.pug
+++ b/visualizer/_views/alignment.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block layout-content
-  h1 #{samplename}
-  div#igviewer
+  h1 #{ samplename }
+  #igviewer
 
 block layout-scripts
   script(src="/js/igv/igv.min.js")
