--- a/visualizer/_css/yavsap.css
+++ b/visualizer/_css/yavsap.css
@@ -1,13 +1,15 @@
 body {
-    background-color: #d1d1f1;
+  background-color: #d1d1f1;
 }
-#igviewer,#phylotree {
-    outline: solid;
-    border-radius: 2pt;
-    background-color: white;
-    overflow: hidden
+#igviewer,
+#phylotree {
+  outline: solid;
+  border-radius: 2pt;
+  background-color: white;
+  overflow: hidden;
 }
 h1 {
-    font-family: 'Myriad Pro', 'Noto Sans', 'Lucida Sans', Verdana, 'Liberation Sans', sans-serif;
-    text-align: center;
+  font-family: "Myriad Pro", "Noto Sans", "Lucida Sans", Verdana,
+    "Liberation Sans", sans-serif;
+  text-align: center;
 }
