--- a/visualizer/_views/layout.pug
+++ b/visualizer/_views/layout.pug
@@ -4,15 +4,15 @@ html(lang="en")
   head
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    meta(http-equiv="X-UA-Compatible" content="IE=edge")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
     link(rel="shortcut icon", href="/favicon.ico")
     link(rel="stylesheet", href="/css/twbs/bootstrap.min.css", type="text/css")
     link(rel="stylesheet", href="/css/fa/all.min.css", type="text/css")
     block layout-styles
     link(rel="stylesheet", href="/css/local/yavsap.css", type="text/css")
-    title #{title} | JEV Analysis Pipeline Results
+    title #{ title } | JEV Analysis Pipeline Results
   body
-    div.container-fluid
+    .container-fluid
       block layout-content
     script(src="/js/jquery/jquery.slim.min.js")
     script(src="/js/popper/popper.min.js")
